<resources>
    <string name="app_name">InfoPelis</string>
    <string name="action_settings">Configuracion</string>
    <string name="action_buscar">Buscar</string>
    <string name="action_ordenar">Ordenar</string>
    <string name="action_image">galeryBoton</string>
    <string name="action_info">Sobre infoPelis</string>
    <string name="title_activity_form">Form</string>
    <string name="title_activity_list">List</string>
    <string name="title_activity_buscar">Busqueda</string>
    <string name="nombreform">Titulo</string>
    <string name="duracionform">Duración</string>
    <string name="categori">Categoria</string>
    <string name="directorform">Director</string>
    <string name="comentarioform">Comenta...</string>
    <string name="titlulo_pickers">Obtener fecha y hora</string>
    <string name="formato_fecha">dd/mm/yyyy</string>
    <string name="formato_hora">hh:mm</string>
    <string name="choose">Elige una opción</string>
    <string name="add">Añadir</string>
    <string name="new_option">Nueva opción</string>
    <string name="cancel">Cancelar</string>
    <string name="borrar">Borrar</string>
    <string name="add_new_option">Añadir nueva opción</string>
    <string name="your_option">Escribe tu opción</string>
    <string name="estreno">Estrenada en el cine</string>
    <string name="contacto">Contacto</string>
    <string name="guardar">Guardar</string>
    <string name="countrow">Aun no se han añadido ninguna pelicula</string>
    <string name="alertDelete">¿Desea borrar la Pelicula?</string>
    <string name="filtro">Criterios de busquedad: </string>
    <string name="fecha">Fecha</string>

    //Errores
    <string name="error_titulo">Introduce un Titulo</string>
    <string name="error_duracion">Introduce un numero entre 1 y 500</string>
    <string name="error_director">Debe Comenzar por Mayuscula</string>
    <string name="error_cat">Introduce un Categoria</string>
    <string name="error_comentario">Introduce algun Comentario</string>
    <string name="error_picker">Introduce un formato correcto(dd/mm/aaaa)</string>



    //Toast
    <string name="error_texto_vacio">Debes de escribir algun texto</string>
    <string name="insertadOK">Se ha isnsertado correctamente</string>
    <string name="insertadKO">No se ha podido insertar correctamente</string>
    <string name="updateOK">Se ha actualizado correctamente</string>
    <string name="updateKO">No se ha podido actualizar correctamente</string>
    <string name="deleteBien">Se ha eliminado correctamente</string>
    <string name="deleteMal">No se ha podido eliminar correctamente</string>
    <string name="write_permission_granted">Tienes permiso de Lescuta</string>
    <string name="write_permission_denied">No tienes permiso de Lescuta</string>
    <string name="write_permission_accepted">Has aceptado permiso de Lescuta</string>
    <string name="write_permission_not_accepted">Debes aceptar los permisos de Lescuta</string>

</resources>
