<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.infopelis.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item android:title="@string/action_buscar" />
    <item
        android:id="@+id/action_contact"
        android:title="@string/action_ordenar" />
    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:orderInCategory="101"
        android:title="@string/action_info"
        app:actionViewClass="android.widget.SearchView" />
</menu>
