<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    app:layout_scrollFlags="scroll|enterAlways"
    tools:context=".Views.Form"
    tools:showIn="@layout/activity_form">


    <ImageButton
        android:id="@+id/galeryBoton"
        android:layout_width="136dp"
        android:layout_height="125dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/action_image"
        android:src="@android:drawable/ic_menu_gallery"
        app:layout_constraintEnd_toStartOf="@+id/saveButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/saveButton"
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/guardar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toEndOf="@+id/galeryBoton"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tituloEditText"
        android:layout_width="250dp"
        android:layout_height="56dp"
        android:layout_marginTop="64dp"
        android:autofillHints="Titulo"
        android:ems="10"
        android:hint="@string/nombreform"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.424"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/saveButton" />

    <ImageButton
        android:id="@+id/datepicker"
        android:layout_width="40dp"
        android:layout_height="37dp"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:background="#00FFFFFF"
        android:src="@android:drawable/ic_menu_today"
        app:layout_constraintEnd_toStartOf="@+id/datepickerText"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/datepickerText"
        android:layout_width="250dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:hint="@string/formato_fecha"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/datepicker"
        app:layout_constraintTop_toBottomOf="@+id/tituloEditText" />

    <EditText
        android:id="@+id/DuracionEditText"
        android:layout_width="250dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/duracionform"
        android:inputType="textPostalAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <EditText
        android:id="@+id/directorEditText"
        android:layout_width="250dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/directorform"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/DuracionEditText" />

    <Button
        android:id="@+id/button"
        android:layout_width="39dp"
        android:layout_height="38dp"
        android:layout_marginTop="45dp"
        android:background="@android:drawable/ic_menu_more"
        app:layout_constraintEnd_toStartOf="@+id/spinner"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datepicker" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="250dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/datepickerText" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="250dp"
        android:layout_height="113dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/comentarioform"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/directorEditText" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:text="@string/estreno"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="43dp"
        android:layout_height="42dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toStartOf="@+id/tituloEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/galeryBoton"
        app:srcCompat="@android:drawable/ic_input_get" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toStartOf="@+id/DuracionEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:srcCompat="@android:drawable/ic_lock_idle_alarm" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="42dp"
        android:layout_height="41dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toStartOf="@+id/directorEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:srcCompat="@android:drawable/ic_menu_view" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="39dp"
        android:layout_height="36dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toStartOf="@+id/editText2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:srcCompat="@android:drawable/ic_menu_info_details" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="39dp"
        android:layout_height="37dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toStartOf="@+id/switch1"
        app:layout_constraintHorizontal_bias="0.445"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:srcCompat="@android:drawable/btn_star" />


</androidx.constraintlayout.widget.ConstraintLayout>